# openpass

./: .gitignore  CMakeLists.txt  Readme.txt
OpenPass_Source_Code/Common/: CMakeLists.txt  carInfo.h  opExport.h  primitiveSignals.h  vector2d.cpp  vector2d.h
OpenPass_Source_Code/Components/Algorithm_CruiseControlByDistance/: CMakeLists.txt  algorithm_cruisecontrolbydistance.h  algorithm_cruisecontrolbydistance_global.h  algorithm_cruisecontrolbydistance_implementation.cpp
OpenPass_Source_Code/Components/Dynamics_Longitudinal_Basic/: CMakeLists.txt  Dynamics_Longitudinal_Basic.pro  dynamics_longitudinal_basic.cpp  dynamics_longitudinal_basic_implementation.cpp  dynamics_longitudinal_basic_implementation.h
OpenPass_Source_Code/Components/Sensor_Distance/: CMakeLists.txt  sensor_distance.cpp  sensor_distance.h  sensor_distance_implementation.cpp  sensor_distance_implementation.h
OpenPass_Source_Code/Components_PCM/Dynamics_CopyTrajectory/: CMakeLists.txt  Dynamics_CopyTrajectory.pro  dynamics_copyTrajectory_global.h  dynamics_copyTrajectory_implementation.h
OpenPass_Source_Code/CoreFramework/OpenPassMaster/: CMakeLists.txt  OpenPassMaster.pro
OpenPass_Source_Code/CoreFramework/OpenPassMaster/importer/: frameworkConfigImporter.h
OpenPass_Source_Code/CoreFramework/OpenPassSlave/: CMakeLists.txt  OpenPassSlave.pro
OpenPass_Source_Code/CoreFramework/OpenPassSlave/collisionDetectionInterface/: collisionDetection.cpp  collisionDetection.h  collisionDetectionLibrary.cpp  collisionDetectionLibrary.h
OpenPass_Source_Code/CoreFramework/OpenPassSlave/framework/: agentFactory.cpp  agentFactory.h  frameworkConfig.h  main.cpp  observationModule.cpp  observationModule.h  observationNetwork.cpp
OpenPass_Source_Code/CoreFramework/OpenPassSlave/importer/: agentTypeImporter.cpp  runConfig.h  runConfigImporter.cpp  scenery.cpp
OpenPass_Source_Code/CoreFramework/OpenPassSlave/modelElements/: agent.cpp  channel.cpp  channelBuffer.h  component.cpp  spawnItemParameter.h  spawnPointNetwork.h
OpenPass_Source_Code/CoreFramework/OpenPassSlave/modelInterface/: modelBinding.h  modelLibrary.cpp  modelLibrary.h
OpenPass_Source_Code/CoreFramework/OpenPassSlave/observationInterface/: observationBinding.h  observationLibrary.cpp  observationLibrary.h
OpenPass_Source_Code/CoreFramework/OpenPassSlave/scheduler/: runResult.cpp  scheduleItem.cpp  scheduleItem.h  schedulePolicy.h  scheduler.h
OpenPass_Source_Code/CoreFramework/OpenPassSlave/spawnPointInterface/: spawnPointBinding.h  spawnPointLibrary.cpp
OpenPass_Source_Code/CoreModules/CollisionDetection/: CMakeLists.txt  collisionDetection.cpp  collisionDetection_implementation.cpp
OpenPass_Source_Code/CoreModules/Observation_State/: CMakeLists.txt  Observation_State.pro  observation_state.h  observation_state_global.h  observation_state_implementation.cpp  observation_state_implementation.h
OpenPass_Source_Code/CoreModules/Observation_Ttc/: CMakeLists.txt  Observation_Ttc.pro  observation_ttc.h  observation_ttc_implementation.h
OpenPass_Source_Code/CoreModules/SpawnPoint_Start/: CMakeLists.txt  spawnpoint_start_implementation.cpp  spawnpoint_start_implementation.h
OpenPass_Source_Code/CoreModules/Stochastics/: CMakeLists.txt  stochastics.h  stochastics_global.h  stochastics_implementation.cpp
OpenPass_Source_Code/CoreModules/World_Basic/: CMakeLists.txt  agentAdapter.cpp  agentAdapter.h  agentNetwork.h  world_basic.cpp  world_basic_implementation.cpp  world_basic_implementation.h
OpenPass_Source_Code/CoreModules_PCM/SpawnPointSingle_0/: CMakeLists.txt  spawnPointSingle_0.cpp  spawnPointSingle_0.h  spawnPointSingle_0_global.h
OpenPass_Source_Code/openPASS/Common/: ALongitudinalDriverToDLongitudinalSignal.h  CMakeLists.txt  DLateralToPRFSSignal.h  accelerationSignal.h  agentBasedEvent.h  agentCompToCompCtrlSignal.h  basicEvent.h  boostGeometryCommon.h  brakingSignal.h  carInfo.h  collisionEvent.h  commonTools.h  compCtrlToAgentCompSignal.h  componentStateChangeEvent.h  dynamicsSignal.h  eventTypes.h  globalDefinitions.h  lateralDriverSignal.h  lateralSignal.h  longitudinalSignal.h  observationTypes.h  opExport.h  openScenarioDefinitions.cpp  openScenarioDefinitions.h  parametersVehicleSignal.h  primitiveSignals.h  secondaryDriverTasksSignal.h  sensorDataSignal.h  spawnPointDefinitions.h  steeringSignal.h  utilities.cpp  utilities.h  vector2d.cpp  vector2d.h  vector3d.cpp  vector3d.h  vectorSignals.h
OpenPass_Source_Code/openPASS/Common_PCM/: CMakeLists.txt  componentPorts.h  defaultPrio_PCM.h  dllHelper.cpp  dllHelper.h  externalTrajectory.h  trajectory.h  trajectorySignal.h
OpenPass_Source_Code/openPASS_GUI/: CHANGES.txt  CMakeLists.txt  GUI_Definitions.h  Installing and running openPASS GUI.docx  openPASS.pro  openPASS_GUI.pro
OpenPass_Source_Code/openPASS_GUI/openPASS/: CMakeLists.txt  openPASS.cpp  openPASS.pro  openPASS.rc
OpenPass_Source_Code/openPASS_GUI/openPASS-Agent/: AgentPlugin.cpp  AgentPlugin.h  CMakeLists.txt  openPASS-Agent.pro
OpenPass_Source_Code/openPASS_GUI/openPASS-Component/: CMakeLists.txt  ComponentPlugin.cpp  ComponentPlugin.h  openPASS-Component.pro
OpenPass_Source_Code/openPASS_GUI/openPASS-PCM/: CMakeLists.txt  PluginPcm.cpp  PluginPcm.h  openPASS-PCM.pro
OpenPass_Source_Code/openPASS_GUI/openPASS-PCM_Evaluation/: CMakeLists.txt  PluginPcm_Eval.cpp  PluginPcm_Eval.h  openPASS-PCM_Eval.pro
OpenPass_Source_Code/openPASS_GUI/openPASS-Project/: CMakeLists.txt  ProjectPlugin.cpp  ProjectPlugin.h  openPASS-Project.pro
OpenPass_Source_Code/openPASS_GUI/openPASS-Scenery/: CMakeLists.txt  SceneryPlugin.cpp  SceneryPlugin.h  openPASS-Scenery.pro
OpenPass_Source_Code/openPASS_GUI/openPASS-Simulation/: CMakeLists.txt  SimulationPlugin.cpp  SimulationPlugin.h  openPASS-Simulation.pro
OpenPass_Source_Code/openPASS_GUI/openPASS-System/: CMakeLists.txt  SystemPlugin.cpp  SystemPlugin.h  openPASS-System.pro  openPASS-System.qrc
OpenPass_Source_Code/openPASS_GUI/openPASS-Window/: CMakeLists.txt  WindowPlugin.cpp  WindowPlugin.h  openPASS-Window.pro  openPASS-Window.qrc
(+1450 files in other folders)
