include_directories(openPASS/Interfaces openPASS/Models openPASS-Window/Interfaces openPASS-Window/Models openPASS-Window/Presenters openPASS-Window/Views openPASS-Agent/Interfaces openPASS-Agent/Models openPASS-Agent/Presenters openPASS-Agent/Views openPASS-Agent openPASS-Component openPASS-PCM openPASS-PCM_Evaluation openPASS-Project openPASS-Scenery openPASS-Simulation openPASS-System openPASS)
add_definitions(-DAPPLICATION_NAME=\"openPASS\" -DAPPLICATION_VERSION=\"0.9\" -DSUBDIR_LIB_PLUGIN=\"./\" -DSUBDIR_LIB_GUI=\"./\" -DSUBDIR_LIB_SIM=\"./\")
ADD_SUBDIRECTORY(openPASS)
ADD_SUBDIRECTORY(openPASS-Agent)
ADD_SUBDIRECTORY(openPASS-Component)
ADD_SUBDIRECTORY(openPASS-PCM)
ADD_SUBDIRECTORY(openPASS-PCM_Evaluation)
ADD_SUBDIRECTORY(openPASS-Project)
ADD_SUBDIRECTORY(openPASS-Scenery)
ADD_SUBDIRECTORY(openPASS-Simulation)
ADD_SUBDIRECTORY(openPASS-System)
ADD_SUBDIRECTORY(openPASS-Window)